--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <div class="">
+        <div class="header-wrapper">
+            <h1 class="header-main">JOI</h1>
         <ul>
             <li>About</li>
             <li>Contact</li>
