--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header-wrapper">
             <h1 class="header-main">JOI</h1>
         <ul class="header-list">
-            <li>About</li>
-            <li>Contact</li>
-            <li>Blog</li>
-            <li>Deployment</li>
-            <li>Developer</li>
+            <li class="header-list-item">About</li>
+            <li class="header-list-item">Contact</li>
+            <li class="header-list-item">Blog</li>
+            <li class="header-list-item">Deployment</li>
         </ul>
+        <p class="header-para">Developer</p>
     </div>
     </header>
     <section></section>
