--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li class="header-list-item">Deployment</li>
         </ul>
         <p class="header-para">Developer</p>
+<img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
     <section></section>
