--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="header">
         <div class="header-wrapper">
-            <h1 class="header-main">JOI</h1>
+            <h1 class="header-main">Joi</h1>
         <ul class="header-list">
             <li class="header-list-item">About</li>
             <li class="header-list-item">Contact</li>
