--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
-    <section></section>
+    <section class="landing">
+ <h1 class="landing-main">A simple, responsive,<br> and
+    user-friendly AI model - you've been searching for it</h1>
+    </section>
     <footer></footer>
 </body>
 </html>
