--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
     </header>
     <section class="landing">
- <h1 class="landing-main">A simple, responsive,<br> and
-    user-friendly AI model - you've been searching for it</h1>
-    </section>
+ <h1 class="landing-main">Make the adaptive, user- <br>friendly AI model accessible - for everyone . </h1>
+    <p class="landing-para">We assist you in enhancing your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs</p>
+</section>
     <footer></footer>
 </body>
 </html>
