--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         <div class="header-wrapper">
             <h1 class="header-main">Joi</h1>
         <ul class="header-list">
-            <li class="header-list-item">About</li>
-            <li class="header-list-item">Contact</li>
-            <li class="header-list-item">Blog</li>
-            <li class="header-list-item">Deployment</li>
+            <li class="header-list-item"><a href="">About</a></li>
+            <li class="header-list-item"><a href="">Contact</a></li>
+            <li class="header-list-item"><a href="">Blog</a></li>
+            <li class="header-list-item"><a href="">Deployment</a></li>
         </ul>
-        <p class="header-para">Developer</p>
+        <p class="header-para"><a href=".">Developer</a></p>
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
     <section class="landing">
  <h1 class="landing-main">Make the adaptive, user- <br>friendly AI model accessible - for everyone . </h1>
-    <p class="landing-para">We assist you in <mark class="mark1">enhancing</mark> your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs</p>
+    <p class="landing-para">We assist you in <mark class="mark1">enhancing</mark> your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
 </section>
     <footer></footer>
 </body>
