--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li class="header-list-item"><a href="">Blog</a></li>
             <li class="header-list-item"><a href="">Deployment</a></li>
         </ul>
-        <p class="header-para"><a href=".">Developer</a></p>
+        <p class="header-para"><a href="./dev.html">Developer</a></p>
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
