--- a/dev.html
+++ b/dev.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="about">
+    <div class="about-wrapper-1">
+        <img src="" alt="">
+        <div class="about-wrapper-2">
+           <h1>Milena B</h1>
+           <div class="about-wrapper-3">
+            <img src="" alt="">
+            <p></p>
+           </div>
+           <p></p>
+        </div>
+    </div>
+    </section>  
 </body>
 </html>
