--- a/dev.html
+++ b/dev.html
@@ -10,10 +10,10 @@
     <div class="about-wrapper-1">
         <img src="" alt="">
         <div class="about-wrapper-2">
-           <h1>Milena B</h1>
+           <h1>Erik Eriksson</h1>
            <div class="about-wrapper-3">
-            <img src="" alt="">
-            <p></p>
+            <img src="./igm/Group.png" alt="">
+            <p>Brussel</p>
            </div>
            <p></p>
         </div>
