--- a/dev.html
+++ b/dev.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JOI>Developer</title>
 </head>
 <body>
     <section class="about">
     <div class="about-wrapper-1">
-        <img src="" alt="">
+        <img src="./igm/Group (1).png" alt="">
         <div class="about-wrapper-2">
            <h1>Erik Eriksson</h1>
            <div class="about-wrapper-3">
