--- a/dev.html
+++ b/dev.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOI>Developer</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="dev">
     <section class="about">
-    <div class="about-wrapper-1">
-        <img src="./igm/Group (1).png" alt="">
-        <div class="about-wrapper-2">
+    <div class="about-wrapper1">
+        <img src="./igm/Group (1).png" alt="" class="png1">
+        <div class="about-wrapper2">
            <h1>Erik Eriksson</h1>
-           <div class="about-wrapper-3">
-            <img src="./igm/Group.png" alt="">
+           <div class="about-wrapper3">
+            <img src="./igm/Group.png" alt="" class="png2">
             <p>Brussel</p>
            </div>
            <p></p>
