--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     </div>
     </header>
     <section class="landing">
- <h1 class="landing-main">Make the adaptive, user- <br>friendly AI model accessible - for everyone . </h1>
+ <h1 class="landing-main">Make adaptive, user- <br>friendly AI models accessible - for everyone . </h1>
     <p class="landing-para">We assist you in <mark class="mark1">enhancing</mark> your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
+<div class="button-wrapper">
+    <button class="btn-1">Begin a conversation</button>
+</div>
 </section>
     <footer></footer>
 </body>
