--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <p class="landing-para">We assist you in <mark class="mark1">enhancing</mark> your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
 <div class="button-wrapper">
     <button class="btn-1">Begin a conversation</button>
+    <button class="btn-1">Learn more</button>
+    <button class="btn-1">Blog</button>
 </div>
 </section>
     <footer></footer>
