--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
     <section class="landing">
  <h1 class="landing-main">Make adaptive, user- <br>friendly AI models accessible - for everyone . </h1>
-    <p class="landing-para">We assist you in <mark class="mark1">enhancing</mark> your projects by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
+    <p class="landing-para">We assist you in <mark class="mark1">enhancing your projects</mark> by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
 <div class="button-wrapper">
-    <button class="btn-1">Begin a conversation</button>
-    <button class="btn-1">Learn more</button>
-    <button class="btn-1">Blog</button>
+    <button class="btn-1"><a href="">Begin a conversation</a></button>
+    <button class="btn-1"><a href="">Learn more</a></button>
+    <button class="btn-1"><a href="">Blog</a></button>
 </div>
 </section>
     <footer></footer>
