--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <button class="btn-1"><a href="">Learn more</a></button>
     <button class="btn-1"><a href="">Blog</a></button>
 </div>
+<img src="./igm/Content Files Pencil Ruler.png" alt="" class="cup">
 </section>
     <footer></footer>
 </body>
