--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     <section class="landing">
  <h1 class="landing-main">Make adaptive, user- <br>friendly AI models accessible - for everyone . </h1>
     <p class="landing-para">We assist you in <mark class="mark1">enhancing your projects</mark> by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
-<div class="button-wrapper">
+<div class="wrapper">
+    <div class="button-wrapper">
     <button class="btn-1"><a href="">Begin a conversation</a></button>
     <button class="btn-1"><a href="">Learn more</a></button>
     <button class="btn-1"><a href="">Blog</a></button>
 </div>
 <img src="./igm/Content Files Pencil Ruler.png" alt="" class="cup">
+</div>
 </section>
     <footer></footer>
 </body>
