--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="landing-para">We assist you in <mark class="mark1"> enhancing your projects</mark>  by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
 <div class="wrapper">
     <div class="button-wrapper">
-    <button class="btn-1"><a href="">Begin a conversation</a></button>
+    <button class="btn-1"><a href="">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button>
     <button class="btn-1"><a href="">Learn more</a></button>
     <button class="btn-1"><a href="">Blog</a></button>
 </div>
