--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="header-wrapper">
             <h1 class="header-main">Joi</h1>
         <ul class="header-list">
-            <li class="header-list-item"><a href="">About</a></li>
-            <li class="header-list-item"><a href="">Contact</a></li>
-            <li class="header-list-item"><a href="">Blog</a></li>
-            <li class="header-list-item"><a href="">Deployment</a></li>
+            <li class="header-list-item"><a href="./about.html">About</a></li>
+            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
+            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
         </ul>
         <p class="header-para"><a href="./dev.html">Developer</a></p>
 <img src="./igm/Vector.png" alt="" class="header-img">
