--- a/dev.html
+++ b/dev.html
@@ -22,7 +22,7 @@
 <body class="dev">
     <header class="header">
         <div class="header-wrapper">
-            <h1 class="header-main">Joi</h1>
+            <h1 class="header-main"><a href="./index.html"></a>Joi</h1>
         <ul class="header-list">
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
