--- a/about.html
+++ b/about.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header-wrapper">
+            <h1 class="header-main"><a href="./index.html"></a>Joi</h1>
+        <ul class="header-list">
+            <li class="header-list-item"><a href="./about.html">About</a></li>
+            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
+            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+        </ul>
+        <p class="header-para"><a href="./dev.html">Developer</a></p>
+<img src="./igm/Vector.png" alt="" class="header-img">
+    </div>
+    </header>
 </body>
 </html>
