--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOI</title>
-    <link rel="icon" href="./igm/Content Files Pencil Ruler.svg">
+    <link rel="icon" href="./igm/Content Files Pencil Ruler.png" class="head-icon">
+    <link rel="icon" href="./igm/Content Files Pencil Ruler.svg" class="head-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
