--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOI</title>
     <link rel="icon" href="./igm/Content Files Pencil Ruler.png" class="head-icon">
-    <link rel="icon" href="./igm/Content Files Pencil Ruler.svg" class="head-icon">
+    <link rel="icon" href="./igm/symbol-defs copy 5.svg #icon-Content-Files-Pencil-Ruler" class="head-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,13 +16,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin id="icon-Content-Files-Pencil-Ruler">
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header"> 
         <div class="header-wrapper">
             <h1 class="header-main">Joi</h1>
         <ul class="header-list">
