--- a/deployment.html
+++ b/deployment.html
@@ -23,7 +23,7 @@
 <body>
     <header class="header">
         <div class="header-wrapper">
-            <h1 class="header-main"><a href="./index.html"></a>Joi</h1>
+            <a href="./index.html" class="header-main">Joi</a>
         <ul class="header-list">
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
