--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <div class="wrapper">
     <div class="button-wrapper">
     <button class="btn-1"><a href="./chat.html">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button>
-    <button class="btn-1"><a href="">Learn more</a></button>
-    <button class="btn-1"><a href="">Blog</a></button>
+    <button class="btn-1"><a href="./about.html">Learn more</a></button>
+    <button class="btn-1"><a href="./blog.html">Blog</a></button>
 </div>
 <img src="./igm/Content Files Pencil Ruler.png" alt="" class="cup">
 </div>
