--- a/chat.html
+++ b/chat.html
@@ -21,6 +21,18 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header class="header"> 
+        <div class="header-wrapper">
+            <a href="./index.html" class="header-main">Joi</a>
+        <ul class="header-list">
+            <li class="header-list-item"><a href="./about.html">About</a></li>
+            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
+            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+        </ul>
+        <p class="header-para"><a href="./dev.html">Developer</a></p>
+<img src="./igm/Vector.png" alt="" class="header-img">
+    </div>
+    </header>
 </body>
 </html>
