--- a/about.html
+++ b/about.html
@@ -34,9 +34,9 @@
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
-    <section>
-    <h1>Our Mission</h1>
-    <p>We believe AI should be personal, powerful, and private. NeuraCore is built to give users control over their digital assistant without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
+    <section class="mission">
+    <h1 class="mission-header">Our Mission</h1>
+    <p class="mission-para">We believe AI should be personal, powerful, and private. Joi is built to give users control over their digital assistant without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
     </section>
 </body>
 </html>
