--- a/about.html
+++ b/about.html
@@ -41,5 +41,7 @@
     <h1 class="mission-header">Our Mission</h1>
     <p class="mission-para">We believe AI should be personal, powerful, and private. Joi is built to give users control over their digital assistant without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
     </section>
+    <div class="cursor"></div>
+
 </body>
 </html>
