--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./main.js">
 </head>
 <body>
     <header class="header">
