--- a/dev.html
+++ b/dev.html
@@ -52,6 +52,10 @@
                 <img src="./igm/Group.png" alt="" class="png2" width="20px" height="30px">
                 <p>Brussel</p>
            </div>
+           <div class="about">
+            <p>github</p>
+           <a href="">https://github.com/Mel-b3002fA</a>
+           </div>
         </div>
     </div>
     </section>  
