--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@ rel="stylesheet"
 href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
 />
 
-<script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+<!-- <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
 
-
+ -->
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.js">
 </head>
@@ -51,7 +51,7 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
-    <script>
+<!--     <script>
         const cursor = new MouseFollower({
           el: null,
           container: document.body,
@@ -90,6 +90,6 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
           hideTimeout: 300,
           hideMediaTimeout: 300,
         });
-      </script>
+      </script> -->
 </body>
 </html>
