--- a/dev.html
+++ b/dev.html
@@ -52,7 +52,7 @@
                 <img src="./igm/Group.png" alt="" class="png2" width="20px" height="30px">
                 <p>Brussel</p>
            </div>
-           <div class="about">
+           <div class="about-wrapper5">
             <p>github</p>
            <a href="">https://github.com/Mel-b3002fA</a>
            </div>
