--- a/dev.html
+++ b/dev.html
@@ -53,7 +53,7 @@
                 <p>Brussel</p>
            </div>
            <div class="about-wrapper5">
-            <p>github</p>
+            <p>GitHub account:</p>
            <a href="">https://github.com/Mel-b3002fA</a>
            </div>
         </div>
