--- a/dev.html
+++ b/dev.html
@@ -54,7 +54,7 @@
            </div>
            <div class="about-wrapper5">
             <p class="wrapper5-para">GitHub account:</p>
-           <a href="">https://github.com/Mel-b3002fA</a>
+           <a href="" class="wrapper5-link">https://github.com/Mel-b3002fA</a>
            </div>
         </div>
     </div>
