--- a/dev.html
+++ b/dev.html
@@ -49,11 +49,11 @@
            
            <div class="about-wrapper4">
                 <img src="./igm/Group.png" alt="" class="png2" width="20px" height="30px">
-                <p class="wrapper4-main">Brussel</p>
+                <h1 class="wrapper4-main">Brussel</h1>
            </div>
-           
+
            <div class="about-wrapper5">
-            <p class="wrapper5-para">GitHub account:</p>
+            <h1 class="wrapper5-para">GitHub account:</h1>
            <a href="" class="wrapper5-link">https://github.com/Mel-b3002fA</a>
            </div>
         </div>
