--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 <body>
     <header class="header"> 
     <div class="header-wrapper">
+        <form action="">
+            <fieldset>
+                <legend>Pick a color scheme</legend>
+                <label for="theme">Light</label>
+                <input type="radio" 
+                name="theme"
+                id="light">
+            </fieldset>
+        </form>
+
             <a href="./index.html" class="header-main">Joi</a>
         <ul class="header-list">
             <li class="header-list-item"><a href="./about.html">About</a></li>
