--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <label for="theme">Light</label>
                 <input type="radio" 
                 name="theme"
-                id="light">
+                id="light" checked>
             </fieldset>
         </form>
 
