--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
     <div class="header-wrapper">
         <form action="">
             <fieldset>
-                <legend>Pick a color scheme</legend>
-                <label for="theme">Light</label>
-                <input type="radio" 
-                name="theme"
-                id="light" checked>
+                <legend>Pick a color scheme </legend>
+                   <label for="theme">Light</label>
+                   <input type="radio" 
+                     name="theme"
+                     id="light" checked>
+                     <label for="theme" class="visually-hidden">
+                        Blue</label>
+                   <input type="radio" 
+                     name="theme"
+                     id="light">
             </fieldset>
         </form>
 
