--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="header-wrapper">
         <form action="">
             <fieldset>
-                <legend>Pick a color scheme </legend>
+                <legend>Pick a color scheme:</legend>
                    <label for="theme">Light</label>
                    <input type="radio" 
                      name="theme"
