--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
 <body>
     <header class="header"> 
     <div class="header-wrapper">
-        <form action="">
+        <form class="color-picker"
+        action="">
             <fieldset>
-                <legend>Pick a color scheme:</legend>
+                <legend class="visually-hidden">Pick a color scheme:</legend>
                    <label for="theme">Light</label>
                    <input type="radio" 
                      name="theme"
                      id="light" checked>
-                     <label for="theme" class="visually-hidden">
-                        Blue</label>
+                     <label for="theme" 
+                     class="visually-hidden">Blue
+                    </label>
                    <input type="radio" 
                      name="theme"
-                     id="light">
+                     id="blue">
             </fieldset>
         </form>
 
