--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
             <a href="./index.html" class="header-main">Joi</a>
         <ul class="header-list">
-            <li class="header-list-item"><a href="./about.html">About</a></li>
-            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
-            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+            <li class="header-list-item"><a href="./about.html" class="about-link">About</a></li>
+            <li class="header-list-item"><a href="./contact.html" class="contact-link">Contact</a></li>
+            <li class="header-list-item"><a href="./blog.html" class="blog-link">Blog</a></li>
+            <li class="header-list-item"><a href="./deployment.html" class="depl-link">Deployment</a></li>
         </ul>
         <p class="header-para"><a href="./dev.html">Developer</a></p>
         <img src="./igm/Vector.png" alt="" class="header-img">
