--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="header-list-item"><a href="./blog.html" class="blog-link">Blog</a></li>
             <li class="header-list-item"><a href="./deployment.html" class="depl-link">Deployment</a></li>
         </ul>
-        <p class="header-para"><a href="./dev.html">Developer</a></p>
+        <p class="header-para"><a href="./dev.html" class="dev-link">Developer</a></p>
         <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
