--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </label>
                     <input type="radio" 
                     name="theme"
-                    id="pink" checked>
+                    id="pink">
                   
                     <label for="theme" 
                      class="visually-hidden" class="theme-clr-black">Black
@@ -74,7 +74,7 @@
     <button class="btn-1"><a href="./about.html" class="more-btn">Learn more</a></button>
     <button class="btn-1"><a href="./blog.html" class="blog-btn">Blog</a></button>
 </div>
-<img src="./igm/Content Files Pencil Ruler.png" alt="" class="cup">
+<img src="./igm/Content Files Pencil Ruler.svg" alt="" class="cup">
 </div>
 </section>
     <footer></footer>
