--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
         <form class="color-picker"
         action="">
-            <fieldset>
+            <fieldset class="fieldset">
                 <label for="theme" class="theme-clr-light">Light</label>
                    <input type="radio" 
                      name="theme"
