--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
     </header>
     <section class="mission">
     <h1 class="mission-header">Our Mission</h1>
-    <p class="mission-para">We believe AI should be personal, powerful, and private. Joi is built to give users control over their digital assistant without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
+    <p class="mission-para">
+        Joi is built to give users <mark class="mark1">control over their digital assistant</mark> without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
     </section>
     <div class="cursor"></div>
 
