--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <label for="theme" class="theme-clr-light">Light
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="radio" 
+                    <input type="checkbox" 
                     name="theme"
                     id="light" checked>
                    
@@ -54,17 +54,17 @@
                      class="visually-hidden" class="theme-clr-pink">Pink
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="radio" 
+                    <input type="checkbox" 
                     name="theme"
                     id="pink">
 
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-black">Black
+                     class="visually-hidden" class="theme-clr-black">Dark
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="radio" 
+                    <input type="checkbox" 
                     name="theme"
                     id="black">
                     
