--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <label for="theme" class="theme-clr-light">Light
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="checkbox" 
+                    <input type="radio" 
                     name="theme"
                     id="light" checked>
                    
@@ -54,7 +54,7 @@
                      class="visually-hidden" class="theme-clr-pink">Pink
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="checkbox" 
+                    <input type="radio" 
                     name="theme"
                     id="pink">
 
@@ -64,7 +64,7 @@
                      class="visually-hidden" class="theme-clr-black">Dark
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
-                    <input type="checkbox" 
+                    <input type="radio" 
                     name="theme"
                     id="black">
                     
