--- a/dev.html
+++ b/dev.html
@@ -57,6 +57,13 @@
            </div>
         </div>
     </div>
-    </section>  
+    </section> 
+    
+    <section>
+        <div></div>
+        <img src="./igm/Quote Left.svg" alt="">
+            <p class="quote"></p>
+        <img src="./igm/Quote Right.svg" alt="">
+    </section>
 </body>
 </html>
