--- a/dev.html
+++ b/dev.html
@@ -61,7 +61,7 @@
     
     <section>
         <div></div>
-        <img src="./igm/Quote Left.svg" alt="">
+        <img src="./igm/Quote Left.svg" alt="" class="">
             <p class="quote"></p>
         <img src="./igm/Quote Right.svg" alt="">
     </section>
