--- a/dev.html
+++ b/dev.html
@@ -60,10 +60,11 @@
     </section> 
     
     <section>
-        <div></div>
+        <div class="quote-wrapper">
         <img src="./igm/Quote Left.svg" alt="" class="">
             <p class="quote"></p>
         <img src="./igm/Quote Right.svg" alt="">
+    </div>
     </section>
 </body>
 </html>
