--- a/dev.html
+++ b/dev.html
@@ -63,7 +63,7 @@
         <div class="quote-wrapper">
         <img src="./igm/Quote Left.svg" alt="" class="">
             <p class="quote"></p>
-        <img src="./igm/Quote Right.svg" alt="">
+        <img src="./igm/Quote Right.svg" alt="" class="quote">
     </div>
     </section>
 </body>
