--- a/dev.html
+++ b/dev.html
@@ -38,6 +38,16 @@
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
+    <section class="quote">
+        <div class="quote-wrapper">
+            <div class="quote-inner-wrapper">
+                <img src="./igm/Quote Left.svg" alt="" class="quote-left">
+                <p class="quote">Why do something manually when you can spend months automating it?</p>
+                <img src="./igm/Quote Right.svg" alt="" class="quote-right">
+            </div>
+            <p class="quote-author">Erik Eriksson</p>
+    </div>
+    </section>
     <section class="about">
     <div class="about-wrapper1">
          <div class="about-wrapper2">
@@ -59,12 +69,5 @@
     </div>
     </section> 
     
-    <section>
-        <div class="quote-wrapper">
-        <img src="./igm/Quote Left.svg" alt="" class="">
-            <p class="quote"></p>
-        <img src="./igm/Quote Right.svg" alt="" class="quote">
-    </div>
-    </section>
 </body>
 </html>
