--- a/dev.html
+++ b/dev.html
@@ -38,11 +38,12 @@
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
+    
     <section class="quote">
         <div class="quote-wrapper">
             <div class="quote-inner-wrapper">
                 <img src="./igm/Quote Left.svg" alt="" class="quote-left">
-                <p class="quote">Why do something manually when you can spend months automating it?</p>
+                <p class="quote-text">Why do something manually when you can spend months automating it?</p>
                 <img src="./igm/Quote Right.svg" alt="" class="quote-right">
             </div>
             <p class="quote-author">Erik Eriksson</p>
