--- a/dev.html
+++ b/dev.html
@@ -43,7 +43,7 @@
         <div class="quote-wrapper">
             <div class="quote-inner-wrapper">
                 <img src="./igm/Quote Left.svg" alt="" class="quote-left">
-                <p class="quote-text">Why do something manually when you can spend months automating it?</p>
+                <h1 class="quote-text">Why do something manually <br>when you can spend months automating it?</h1>
                 <img src="./igm/Quote Right.svg" alt="" class="quote-right">
             </div>
             <p class="quote-author">Erik Eriksson</p>
