--- a/dev.html
+++ b/dev.html
@@ -46,7 +46,7 @@
                 <h1 class="quote-text">Why do something manually <br>when you can spend months automating it?</h1>
                 <img src="./igm/Quote Right.svg" alt="" class="quote-right">
             </div>
-            <p class="quote-author">Erik Eriksson</p>
+            <p class="quote-author">~ The Dev at some point</p>
     </div>
     </section>
     <section class="about">
