--- a/dev.html
+++ b/dev.html
@@ -64,7 +64,7 @@
 
            <div class="about-wrapper5">
             <h1 class="wrapper5-para">GitHub account:</h1>
-            <a href="" class="wrapper5-link">https://github.com/Mel-b3002fA</a>
+            <a href="https://github.com/Mel-b3002fA" class="wrapper5-link">Erik Eriksson</a>
            </div>
         </div>
     </div>
