--- a/dev.html
+++ b/dev.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOI</title>
+    <title class="title">JOI</title>
     <link rel="icon" href="./igm/Content Files Pencil Ruler.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
