--- a/dev.html
+++ b/dev.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.js">
 </head>
-<body class="dev">
+<body class="dev body">
     <header class="header">
         <div class="header-wrapper">
             <a href="./index.html" class="header-main">Joi</a>
