--- a/dev.html
+++ b/dev.html
@@ -82,7 +82,7 @@
                 <h1 class="quote-text">Why do something manually <br>when you can spend months automating it?</h1>
                 <img src="./igm/Quote Right.svg" alt="" class="quote-right">
             </div>
-                <p class="quote-author">~ The Dev at some point</p>
+         <!--        <p class="quote-author">~ The Dev at some point</p> -->
 
             </div>
     </div>
