--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
 <img src="./igm/Content Files Pencil Ruler.svg" alt="" class="cup">
 </div>
 </section>
-    <footer></footer>
+    <footer class="footer">
+        <ul class="footer-list">
+            <li class="footer-item"></li>
+            <li class="footer-item"></li>
+            <li class="footer-item"></li>
+            <li class="footer-item"></li>
+            <li class="footer-item"></li>
+            <li class="footer-item"></li>
+        </ul>
+    </footer>
 </body>
 </html>
