--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         action="">
             <fieldset class="fieldset">
                 <div class="checkbox-wrapper">
-                    <label for="theme" class="theme-clr-light">Light
+                    <label for="theme" class="theme-clr-light">
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
