--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div> 
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-pink">Pink
+                     class="visually-hidden" class="theme-clr-pink">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -63,7 +63,7 @@
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-black">Dark
+                     class="visually-hidden" class="theme-clr-black">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -120,13 +120,16 @@
 </section>
     <footer class="footer">
         <ul class="footer-list">
-            <li class="footer-item"></li>
-            <li class="footer-item"></li>
+            <li class="footer-item">Blog</li>
+            <li class="footer-item">Contact</li>
             <li class="footer-item"></li>
             <li class="footer-item"></li>
             <li class="footer-item"></li>
             <li class="footer-item"></li>
         </ul>
+        <div class="footer-copyright">
+            <p>Copyright © JOI | Designed by <span class="footer-span">Erik Eriksson</span>Templates - Powered by <span class="footer-span">Bootstrap</span></p>
+        </div>
     </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
