--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       </div>
 </section>
     <footer class="footer">
+        <a href="./index.html" class="header-main">Joi</a>
         <ul class="footer-list">
             <li class="footer-item">Blog</li>
             <li class="footer-item">Contact</li>
@@ -128,7 +129,7 @@
             <li class="footer-item"></li>
         </ul>
         <div class="footer-copyright">
-            <p>Copyright © JOI | Designed by <span class="footer-span">Erik Eriksson</span>Templates - Powered by <span class="footer-span">Bootstrap</span></p>
+            <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span> - Powered by <span class="footer-span">Bootstrap</span></p>
         </div>
     </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
