--- a/dev.html
+++ b/dev.html
@@ -38,7 +38,7 @@
         action="">
             <fieldset class="fieldset">
                 <div class="checkbox-wrapper">
-                    <label for="theme" class="theme-clr-light">Light
+                    <label for="theme" class="theme-clr-light">
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -48,23 +48,21 @@
                 </div> 
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-pink">Pink
+                     class="visually-hidden" class="theme-clr-pink">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
                     name="theme"
                     id="pink">
-
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-black">Dark
+                     class="visually-hidden" class="theme-clr-black">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
                     name="theme"
                     id="black">
-                    
                 </div>
                    
             </fieldset>
