--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                     <input type="radio" 
                     name="theme"
                     id="pink">
-
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
@@ -69,7 +68,6 @@
                     <input type="radio" 
                     name="theme"
                     id="black">
-                    
                 </div>
                    
             </fieldset>
@@ -118,20 +116,59 @@
         </button>
       </div>
 </section>
-    <footer class="footer">
-        <a href="./index.html" class="header-main">Joi</a>
-        <ul class="footer-list">
-            <li class="footer-item">Blog</li>
-            <li class="footer-item">Contact</li>
-            <li class="footer-item"></li>
-            <li class="footer-item"></li>
-            <li class="footer-item"></li>
-            <li class="footer-item"></li>
+<footer class="footer">
+    <div class="footer-div">
+        <ul class="footer-list-one">
+            <li>
+                <p href="./index.html" class="header-main">Joi</p>
+           </li>
+           <li class="list-item">
+            Explore dynamic, versatile AI models 
+           </li>
+           <li>
+            <div class="footer-svg-list">
+                <svg width="7" class="footer-svg footer-svg-special">
+                    <use href="./images/symbol-defs copy.svg#icon-facebook"></use>
+                </svg>
+                <svg width="13"  class="footer-svg">
+                    <use href="./images/symbol-defs copy.svg#icon-twitter"></use>
+                </svg>
+                <svg  width="13"  class="footer-svg">
+                    <use href="./images/symbol-defs copy.svg#icon-linkedin"></use>
+                </svg>
+                <svg  width="13"  class="footer-svg">
+                    <use href="./images/symbol-defs copy.svg#icon-instagram"></use>
+                </svg>
+            </div>
+           </li>
         </ul>
-        <div class="footer-copyright">
-            <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span> - Powered by <span class="footer-span">Bootstrap</span></p>
-        </div>
-    </footer>
+        <ul class="footer-list-two">
+            <li class="list-header"><h2>Pages</h2></li>
+            <li class="list-item">Style guide</li>
+            <li class="list-item">Protected</li>
+            <li class="list-item">Licenses</li>
+            <li class="list-item">Changelog</li>
+            <li class="list-item">404</li>
+        </ul>
+        <ul class="footer-list-three">
+            <li class="list-header"><h2>Explore</h2></li>
+            <li class="list-item">About us</li>
+            <li class="list-item">Recent blog</li>
+            <li class="list-item">Pricing plan</li>
+            <li class="list-item">Our projects</li>
+            <li class="list-item">Contact us</li>
+        </ul>
+        <ul class="footer-list-four">
+            <li class="list-header"><h2>Contact</h2></li>
+            <li class="list-item">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</li>
+            <li class="list-item">contact@interno.com</li>
+            <li  class="list-item">(123) 456 - 7890</li>
+        </ul>
+    </div>
+    <div class="footer-copyright">
+        <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">Webflow</span></p>
+    </div>
+</footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
