--- a/index.html
+++ b/index.html
@@ -120,50 +120,52 @@
     <div class="footer-div">
         <ul class="footer-list-one">
             <li>
-                <p href="./index.html" class="header-main">Joi</p>
+                <p href="./index.html" class="footer-main">Joi</p>
            </li>
            <li class="list-item">
-            Explore dynamic, versatile AI models 
+            Dynamic, versatile AI models in sight
            </li>
            <li>
             <div class="footer-svg-list">
                 <svg width="7" class="footer-svg footer-svg-special">
-                    <use href="./images/symbol-defs copy.svg#icon-facebook"></use>
+                    <use href="."></use>
                 </svg>
                 <svg width="13"  class="footer-svg">
-                    <use href="./images/symbol-defs copy.svg#icon-twitter"></use>
+                    <use href="."></use>
                 </svg>
                 <svg  width="13"  class="footer-svg">
-                    <use href="./images/symbol-defs copy.svg#icon-linkedin"></use>
+                    <use href="."></use>
                 </svg>
                 <svg  width="13"  class="footer-svg">
-                    <use href="./images/symbol-defs copy.svg#icon-instagram"></use>
+                    <use href="."></use>
                 </svg>
             </div>
            </li>
         </ul>
-        <ul class="footer-list-two">
-            <li class="list-header"><h2>Pages</h2></li>
+        <div class="footer-wrapper">
+        <ul class="footer-list2">
+            <li class="list-header"><p>Pages</p></li>
             <li class="list-item">Style guide</li>
             <li class="list-item">Protected</li>
             <li class="list-item">Licenses</li>
             <li class="list-item">Changelog</li>
             <li class="list-item">404</li>
         </ul>
-        <ul class="footer-list-three">
-            <li class="list-header"><h2>Explore</h2></li>
+        <ul class="footer-list3">
+            <li class="list-header"><p>Explore</p></li>
             <li class="list-item">About us</li>
             <li class="list-item">Recent blog</li>
             <li class="list-item">Pricing plan</li>
             <li class="list-item">Our projects</li>
             <li class="list-item">Contact us</li>
         </ul>
-        <ul class="footer-list-four">
-            <li class="list-header"><h2>Contact</h2></li>
+        <ul class="footer-list4">
+            <li class="list-header"><p>Contact</p></li>
             <li class="list-item">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</li>
             <li class="list-item">contact@interno.com</li>
             <li  class="list-item">(123) 456 - 7890</li>
         </ul>
+    </div>
     </div>
     <div class="footer-copyright">
         <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">Webflow</span></p>
