--- a/index.html
+++ b/index.html
@@ -122,23 +122,14 @@
             <li>
                 <p href="./index.html" class="footer-main">Joi</p>
            </li>
-           <li class="list-item">
-            Dynamic, versatile AI models in sight
+           <li class="list-item"><mark class="mark1">Dynamic, versatile AI models in sight</mark>
            </li>
            <li>
-            <div class="footer-svg-list">
-                <svg width="7" class="footer-svg footer-svg-special">
-                    <use href="."></use>
-                </svg>
-                <svg width="13"  class="footer-svg">
-                    <use href="."></use>
-                </svg>
-                <svg  width="13"  class="footer-svg">
-                    <use href="."></use>
-                </svg>
-                <svg  width="13"  class="footer-svg">
-                    <use href="."></use>
-                </svg>
+            <div class="footer-img-list">
+                    <img src="./igm/logo-discord.svg" alt="" class="footer-img">
+                    <img src="./igm/logo-social-media-facebook-circle.svg" alt="" class="footer-img">
+                    <img src="./igm/logo-social-media-instagram.svg" alt="" class="footer-img">
+                    <img src="./igm/logo-twitter.svg" alt="" class="footer-img">
             </div>
            </li>
         </ul>
