--- a/blog.html
+++ b/blog.html
@@ -29,13 +29,13 @@
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
             <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Models</a></li>
         </ul>
         <form class="color-picker"
         action="">
             <fieldset class="fieldset">
                 <div class="checkbox-wrapper">
-                    <label for="theme" class="theme-clr-light">Light
+                    <label for="theme" class="theme-clr-light">
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -45,7 +45,7 @@
                 </div> 
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-pink">Pink
+                     class="visually-hidden" class="theme-clr-pink">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -55,7 +55,7 @@
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-black">Dark
+                     class="visually-hidden" class="theme-clr-black">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
