--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
             <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Models</a></li>
         </ul>
         <form class="color-picker"
         action="">
             <fieldset class="fieldset">
                 <div class="checkbox-wrapper">
-                    <label for="theme" class="theme-clr-light">Light
+                    <label for="theme" class="theme-clr-light">
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -61,7 +61,7 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
                 </div> 
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-pink">Pink
+                     class="visually-hidden" class="theme-clr-pink">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
@@ -71,7 +71,7 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
                 </div>
                 <div class="checkbox-wrapper">
                     <label for="theme" 
-                     class="visually-hidden" class="theme-clr-black">Dark
+                     class="visually-hidden" class="theme-clr-black">
 <!--                      <span><img src="" alt="" class="checkbox-span"></span> -->
                     </label>
                     <input type="radio" 
