--- a/dev.html
+++ b/dev.html
@@ -32,7 +32,7 @@
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
             <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+            <li class="header-list-item"><a href="./deployment.html">Models</a></li>
         </ul>
         <form class="color-picker"
         action="">
