--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="header-list-item"><a href="./about.html" class="about-link">About</a></li>
             <li class="header-list-item"><a href="./contact.html" class="contact-link">Contact</a></li>
             <li class="header-list-item"><a href="./blog.html" class="blog-link">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html" class="depl-link">Deployment</a></li>
+            <li class="header-list-item"><a href="./deployment.html" class="depl-link">Models</a></li>
         </ul>
         <form class="color-picker"
         action="">
@@ -122,7 +122,7 @@
             <li>
                 <p href="./index.html" class="footer-main">Joi</p>
            </li>
-           <li class="list-item"><mark class="mark1">Dynamic, versatile AI models in sight</mark>
+           <li class="list-item"><mark class="mark1">Dynamic, versatile</mark> AI models in sight
            </li>
            <li>
             <div class="footer-img-list">
