--- a/about.html
+++ b/about.html
@@ -22,7 +22,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.js">
 </head>
@@ -36,26 +35,26 @@
             <li class="header-list-item"><a href="./blog.html">Blog</a></li>
             <li class="header-list-item"><a href="./deployment.html">Models</a></li>
         </ul>
-<!--        <form class="color-picker"
+      <form class="color-picker"
         action="">
-            <fieldset class="fieldset"> -->
-               <!--  <div class="checkbox-wrapper">
+            <fieldset class="fieldset">
+              <div class="checkbox-wrapper">
                     <label for="theme" class="theme-clr-light">
-                       <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> 
+                       <span><img src="" alt="" class="checkbox-span"></span> 
                     </label>
                     <input type="radio" 
                     name="theme"
                     id="light" checked>
-                </div>  -->
-               <!--  <div class="checkbox-wrapper">
+                </div>  
+             <div class="checkbox-wrapper">
                     <label for="theme" 
                      class="visually-hidden" class="theme-clr-pink">
                     </label>
                     <input type="radio" 
                     name="theme"
                     id="pink">
-                </div> -->
-              <!--   <div class="checkbox-wrapper">
+                </div> 
+            <div class="checkbox-wrapper">
                     <label for="theme" 
                      class="visually-hidden" class="theme-clr-black">
 
@@ -63,26 +62,15 @@
                     <input type="radio" 
                     name="theme"
                     id="black"> 
-                </div>    --> 
-<!--             </fieldset>
-        </form>   -->
+                </div>   
+           </fieldset>
+        </form>   
 
-        <div class="form-check form-switch">
+<!--         <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
-          </div>
-         <!--  <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-            <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
+            <label class="form-check-label" for="flexSwitchCheckDefault">Dark theme</label> 
           </div> -->
-<!--           <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDisabled" disabled>
-            <label class="form-check-label" for="flexSwitchCheckDisabled">Disabled switch checkbox input</label>
-          </div> -->
-<!--           <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCheckedDisabled" checked disabled>
-            <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Disabled checked switch checkbox input</label>
-          </div> -->
+
 
 
 
@@ -96,6 +84,6 @@
         Joi is built to give users <mark class="mark1">control over their digital assistant</mark> without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
     </section>
     <div class="cursor"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
 </body>
 </html>
