--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <a href="https://discord.com/" class="footer-img" target="blank"> <img src="./igm/logo-discord.svg" alt="" class="footer-img"></a>
                 <a href="https://www.facebook.com/" class="footer-img" target="blank"> <img src="./igm/logo-social-media-facebook-circle.svg" alt="" class="footer-img"></a>
                 <a href="https://www.instagram.com/?hl=en%22" class="footer-img" target="blank"> <img src="./igm/logo-social-media-instagram.svg" alt="" class="footer-img"></a>
-                <a href="https://x.com/" class="footer-img"> <img src="./igm/logo-twitter.svg" alt="" class="footer-img" target="blank"></a>
+                <a href="https://x.com/" class="footer-img" target="blank"> <img src="./igm/logo-twitter.svg" alt="" class="footer-img"></a>
     
             </div>
            </li>
