--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>
                 <p href="./index.html" class="footer-main">Joi</p>
            </li>
-           <li class="list-item"><mark class="mark1">Dynamic, versatile</mark> AI models in sight
+           <li class="list-item"><mark class="mark1">Dynamic, versatile</mark> AI models in sight.
            </li>
            <li>
             <div class="footer-img-list">
