--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./main.js">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="chat-body">
@@ -55,7 +54,7 @@
       <button class="button clear-chat-button">Clear Chat</button>
     </div>
 
-    <script src="app.js"></script>
+    <script src="main.js"></script>
     </div>
 </body>
 </html>
