--- a/chat.html
+++ b/chat.html
@@ -36,7 +36,7 @@
 
       <div class="chat-messages">
         <div class="message blue-bg">
-          <div class="message-sender">John</div>
+          <div class="message-sender">You</div>
           <div class="message-text">Hey Jane, what's up?</div>
           <div class="message-timestamp">10:30 AM</div>
         </div>
