--- a/chat.html
+++ b/chat.html
@@ -23,7 +23,7 @@
     <div class="chat-wrapper">
         <header class="chat-header"> 
            <div class="chat-wrapper">
-            <a href="./index.html" class="header-main">Joi</a>
+            <a href="./index.html" class="header-main chat-header">Joi</a>
            </div>
         </header>
     <!-- Person selector: this contains buttons for user to select whether to chat as John or Jane -->
