--- a/chat.html
+++ b/chat.html
@@ -27,28 +27,23 @@
            </div>
         </header>
     <!-- Person selector: this contains buttons for user to select whether to chat as John or Jane -->
-    <div class="person-selector">
-      <button class="button person-selector-button active-person" id="john-selector">Chat 1</button>
-      <button class="button person-selector-button" id="jane-selector">Chat 2</button>
-    </div>
     <div class="chat-container">
-      <h2 class="chat-header">John chatting...</h2>
 
       <div class="chat-messages">
         <div class="message blue-bg">
           <div class="message-sender">You</div>
-          <div class="message-text">Hey Jane, what's up?</div>
+          <div class="message-text">Hey Joi, whats the atomic number of the most important element in organic chemistry?</div>
           <div class="message-timestamp">10:30 AM</div>
         </div>
         <div class="message gray-bg">
-          <div class="message-sender">Jane</div>
+          <div class="message-sender">Joi</div>
           <div class="message-text">Not much, just living the dream. How about you?</div>
           <div class="message-timestamp">10:35 AM</div>
         </div>
       </div>
 
       <form class="chat-input-form">
-        <input type="text" class="chat-input" required placeholder="Type here, John..." />
+        <input type="text" class="chat-input" required placeholder="Type anything!" />
         <button type="submit" class="button send-button">Send</button>
       </form>
       <button class="button clear-chat-button">Clear Chat</button>
