--- a/chat.html
+++ b/chat.html
@@ -49,7 +49,7 @@
 
       <form class="chat-input-form">
         <input type="text" class="chat-input" required placeholder="Type here!" />
-        <button type="submit" class="button send-button">Send</button>
+        <button type="submit" class="button send-button btn1">Send</button>
       </form>
       <button class="button clear-chat-button">Clear Chat</button>
     </div>
