--- a/chat.html
+++ b/chat.html
@@ -30,6 +30,7 @@
     <div class="person-selector">
       <button class="button person-selector-button active-person" id="model1-selector">Chat 1</button>
     <button class="button person-selector-button" id="model2-selector">Chat 2</button>
+    <button  class="button person-selector-button">New chat <button>+</button></button>
     </div>
     <div class="chat-container">
 
