--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </ul>
         <ul class="footer-list4">
             <li class="list-header"><p>Contact</p></li>
-            <li class="list-item">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</li>
-            <li class="list-item">contact@interno.com</li>
+            <li class="list-item">Musterstraße 3a</li>
+            <li class="list-item">contact@joi.com</li>
             <li  class="list-item">(123) 456 - 7890</li>
         </ul>
     </div>
